--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,11 +9,6 @@
     background-color: #F0F8FF;
 }
 
-.footer {
-    color: lightgray;
-    background-color: black;
-    border-color: black;
-}
 .header {
     background-color: black;
     border: solid;
@@ -24,6 +19,14 @@
     font-size: 40px;
     color: lightgray;
 }
+
+.footer {
+    color: lightgray;
+    background-color: black;
+    border-color: black;
+}
+
+
 
 .bio {
     font-style: italic;
@@ -53,13 +56,11 @@
 }
 
 #linkedIn {
-    /*background-color: white;*/
     font: 0;
 }
 
 #email {
-/*    background-color: white;
-*/    color: red;
+    color: red;
     font-size: 0em;
 }
 
@@ -158,7 +159,6 @@
     left: 0;
 }
 
-/*Project specific style*/
 .card {
     background-color: black;
     color: lightgray;
